# event-sourced-cognitive-os

./: .gitignore  LICENSE  README.md  pyproject.toml
ecos/: __init__.py  kernel.py
ecos/core/: __init__.py  primitives.py
ecos/examples/: demo_branching.py  demo_compiler_loop.py
ecos/skills/: __init__.py  compiler.py  diff.py  ir.py  lowering_skill.py  optimizer.py
ecos/tests/: test_semantic_drift_harness.py  test_semantic_gate_violations.py
