[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecos"
version = "0.1.0"
description = "Event-Sourced Cognitive Operating System (E-COS) — A replayable, branching, deterministic computational substrate for cognition, agents, skills, and MCP."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "E-COS Contributors"}
]
keywords = ["agent", "cognitive", "event-sourcing", "ai-os", "branching", "deterministic", "mcp", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/AvaPrime/event-sourced-cognitive-os"
Repository = "https://github.com/AvaPrime/event-sourced-cognitive-os"
Issues = "https://github.com/AvaPrime/event-sourced-cognitive-os/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ecos*"]
namespaces = false

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true